fix bug 43886, single signon no longer works, r=jefft