mailnews/base/util/nsMsgIncomingServer.cpp
@@ -632,7 +632,7 @@ nsMsgIncomingServer::GetPasswordWithUI(const PRUnichar * aPromptMessage, const
 			rv = GetServerURI(getter_Copies(serverUri));
 			if (NS_FAILED(rv)) return rv;
 			rv = dialog->PromptPassword(aPromptTitle, aPromptMessage, 
-                                        NS_ConvertToString(serverUri).GetUnicode(), PR_TRUE,
+                                        NS_ConvertToString(serverUri).GetUnicode(), nsIPrompt::SAVE_PASSWORD_PERMANENTLY,
                                         getter_Copies(uniPassword), okayValue);
             if (NS_FAILED(rv)) return rv;
 				
